# deep-license-plate-recognition

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  WSL_Install.bat  alpr_video.py  anpr_camera_stream.py  anpr_camera_stream_og.py  benchmark.md  benchmark.py  benchmark_blur.py  biome.json  blurry_benchmark.py  cowi_images.py  ftp_and_sftp_processor.py  ftp_processor.py  ignore-list-sample.txt  image_spliter.py  image_splitter.py  jsconfig.json  multi_step_lookup.py  multiple_parkpow.py  number_plate_redaction.py  plate_background_color.py  plate_recognition.py  pyoxidizer.bzl  pyproject.toml  pytest.ini  save_1.csv  sdk-benchmark.py  sftp_processor.py  stream-monitor.py  stream.py  supported-hardware.md  test_cap.py  transfer.py  tuning_app.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-review.yml  installers.yml  test-snapshot-middleware.yml
benchmark/: README.md  benchmark.py  benchmark_blur.md  benchmark_blur.py  benchmark_parkpow.md  benchmark_parkpow.py  benchmark_snapshot.py  benchmark_stream.py  container_stats.py
blur/: Dockerfile  README.md  main.py
cpp/: README.md
cpp/PRec_Cpp_Linux/: PRec_Cpp_Linux_Instructions.docx  numberPlate.cpp  output
cpp/PRec_Cpp_Windows/: ConsoleApplication2.sln
cpp/linux/: numberPlate.cpp
csharp/: PlateRecognizer.sln  Program.cs  README.md
csharp/PlateRecognizer/: PlateReader.cs  PlateReaderResult.cs  PlateRecognizer.csproj  Program.cs
docker/: .gitignore  PlateRec_Install.py  PlateRec_Install.spec  PlateRec_SDK_Manager.py  PlateRec_SDK_Manager.spec  README.md  WSL_Install.bat  base_stream_conf.ini  build.md  installer.md  installer_helpers.py  manage-sdk.py  manage_sdk.py  platerec_installer.py  platerec_installer.spec  requirements.txt  sdk_integration.py  stream_config.py
docker/assets/: script.js  style.css
docker/dd-extension/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  logo.svg:Zone.Identifier  (+1 more)
gate-controller/: README.md  next.config.ts  package.json
gate-controller/src-tauri/: Cargo.toml  tauri.conf.json
gate-controller/src-tauri/capabilities/: default.json
gate-controller/src-tauri/src/: config.rs  main.rs  webhook_server.rs
gate-controller/src-tauri/src/relay/: ch340.rs  cp210x.rs  hw348.rs  mod.rs
java/: README.md
parkpow/: remove_old_visits.py
snapshot/: .env.example  main.py  pyproject.toml
snapshot-middleware/: README.md  package-lock.json  package.json  rollbar.toml  vitest.config.js  wrangler.toml
stream/: README.md  remove-images.sh  remove_images.py  remove_images_space_percentage.py  requirements.txt  stream_monitor.py  upload-folder.py  video_upload.py  video_upload.spec
video-editor/: .gitignore  Dockerfile  README.md  benchmark_video_blur.py  docker-compose.yml  env.txt.sample  interpolator.py  main.py  requirements.txt  utils.py  video_editor.py
webhook-middleware/: .env.sample  Dockerfile  README.md  consumer.py  requirements.txt
webhooks/: README.md  multiple_parkpow.py  package.json  webhook_alerts_OpenEye.py  webhook_reader.js  webhook_reader.py  webhook_reader_flask.py  webhook_tester.py
zapier/: .gitignore  .zapierapprc  README.md  authentication.js  index.js  package-lock.json  package.json
(+387 files in other folders)
