[tool.poetry]
name = "platerec"
version = "0.1.0"
description = ""
authors = ["Marc Belmont"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "10.2.0"
requests = "^2.31.0"
psutil = "^5.7.0"
paramiko = "^3.4.0"
flask = "^2.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
pytest = "^7.3.1"
hypothesis = "*"
flake8 = "*"
yapf = "==0.27"
rope = "^0.14.0"
pdbpp = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "DJ", # flake8-django
    "B" # flake8-bugbear
]

ignore = [
    "E401",
    "E501",
]
