[tool.poetry]
name = "platerec"
version = "0.1.0"
description = ""
authors = ["Marc Belmont"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "10.2.0"
requests = "^2.31.0"
psutil = "^5.7.0"
paramiko = "^3.4.0"
flask = "^2.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
pytest = "^7.3.1"
hypothesis = "*"
flake8 = "*"
yapf = "==0.27"
rope = "^0.14.0"
pdbpp = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
mccabe.max-complexity = 16
isort.split-on-trailing-comma = false
ignore = ["E501", "E251", "E266", "E401", "DJ001", "W291"]
select = [
  "B",
  "E",
  "F",
  "I",
  "N",
  "W",
  "C9",
  "DJ",
  "UP",
  "SIM101",
  "SIM102",
  "SIM103",
  "SIM108",
  "SIM109",
  "SIM113",
  "SIM114",
  "SIM201",
  "SIM202",
  "SIM208",
  "SIM210",
  "SIM211",
  "SIM212",
  "SIM220",
  "SIM221",
  "SIM910",
  "SIM911",
]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
disable_error_code = ["annotation-unchecked"]
