[package]
name = "gatecontroller"
version = "0.1.0"
description = "takes API from external source and triggers gate dry contact to open"
authors = ["Platerecognizer"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-core = "2.0.0-beta.0"
serialport = "4.1.0"
tauri-plugin-opener = "2"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"
